--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 database.driverClass=com.mysql.cj.jdbc.Driver
 #database.driverClass=org.h2.Driver
 database.url=jdbc:mysql://localhost:3306/hib_cache?autoReconnect=true&useSSL=false
-#database.url=jdbc:h2:./db/repository
+#database.url=jdbc:h2:./db/mfh.learn.hib.repository
 #datasource.url= jdbc:postgresql://localhost:5432/ecommerce
 database.username=root
 database.password=12345678
